# nextgen-machine-learning

./: .env  .gitignore  README.md  pyproject.toml  setup_file_structure.py
projects/project-01-customer-churn/: README.md
projects/project-02-fraud-detection/: README.md
src/nextgen_machine_learning/: __init__.py
